fixed alignment issues throughout application

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,3 @@
 div {
-	overflow-x: hidden;
+    overflow: hidden;
 }
