--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -124,10 +124,6 @@
             bottom: 20px;
             left: 100px;
 
-            @media screen and (max-width: 500px) {
-                display: none;
-            }
-
             @media screen and (max-width: 1200px) {
                 display: none;
             }
@@ -234,17 +230,6 @@
         width: 500px;
         z-index: 3;
 
-        // @media screen and (max-width: 1100px) {
-        // 	height: 500px;
-        // 	width: 500px;
-        // 	// bottom: 200px;
-        // 	// right: 280px;
-        // 	position: relative;
-        // 	z-index: 1000;
-        // 	right: 0;
-        // 	bottom: 0;
-        // }
-
         @media screen and (max-width: 800px) {
             height: 400px;
             width: 400px;
@@ -255,13 +240,6 @@
             width: 300px;
             margin-top: 60px;
         }
-
-        // @media screen and (min-width: 1500px) {
-        // 	height: 500px;
-        // 	width: 500px;
-        // 	right: 80px;
-        // 	bottom: 400px;
-        // }
     }
 }
 
