--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,14 +1,21 @@
 #navbar {
-	width: 100%;
-	height: 50px;
-	position: absolute;
-	border: 1px solid gray;
-	background-color: gray;
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    border: 1px solid gray;
+    background-color: gray;
 }
 
 .nav-link {
-	transition: ease-in 100ms;
-	&:hover {
-		transform: scale(1.1);
-	}
+    padding: 6px;
+    height: 100%;
+    overflow-y: hidden;
+    transition: ease-in 100ms;
+    &:hover {
+        transform: scale(1.08);
+    }
+}
+
+.container-fluid {
+    overflow: hidden;
 }
