--- a/src/components/projectList/ProjectList.scss
+++ b/src/components/projectList/ProjectList.scss
@@ -22,7 +22,7 @@
         .p1-title {
             margin-top: 180px;
             font-size: 40px;
-            font-weight: 600;
+            font-weight: 400;
 
             @media screen and (max-width: 500px) {
                 margin-top: 50px;
@@ -31,6 +31,7 @@
 
             @media screen and (min-width: 1700px) {
                 margin-top: 100px;
+                margin-bottom: 100px;
             }
         }
     }
@@ -52,7 +53,8 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                margin-bottom: 100px;
+                margin-bottom: 50px;
+                margin-top: 20px;
             }
             @media screen and (max-width: 1700px) {
                 flex-direction: column;
